# system_prototype

./: CMakeLists.txt  main.cpp
src/common/: common.hpp
src/common/interfaces/: buffer_concept.hpp  interface_concept.hpp  reader_sequence.hpp  sequence_buffer.hpp  writer_sequence.hpp
src/common/json/: json.hpp
src/common/json/headers/: json_array.hpp  json_common.hpp  json_loader.hpp  json_object.hpp  json_output.hpp
src/common/json/sources/: json_array.cpp  json_common.cpp  json_loader.cpp  json_object.cpp  json_output.cpp
src/common/type_traits/: type_traits.hpp
src/common/type_traits/types/properties/: member_detector.hpp  member_type_detector.hpp  reference_counter.hpp  type_detector.hpp
src/system_traits/: system.cpp  system.hpp
src/system_traits/components/: base_fc.cpp  base_fc.hpp  components_container.cpp  components_container.hpp
src/system_traits/configuration/: config_reader.cpp  config_reader.hpp  configuration.cpp  configuration.hpp
src/system_traits/configuration/cfg_type_readers/: system_component_config.cpp  system_component_config.hpp  system_messages_config.cpp  system_messages_config.hpp
src/system_traits/messages/: head_message.hpp  messages.hpp
src/system_traits/messages/container/: message_concept.hpp  message_model.hpp  messages_container.cpp  messages_container.hpp
src/system_traits/task_processor/: task_processor.hpp
